--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "predev": "eslint src --fix",
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js",
-    "lint": "eslint . --fix"
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "api_portafolio": "file:",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.9.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
